340835710: (fix) [Risk assessment] change page view when callout is visible

--- a/modules/ui/src/app/pages/risk-assessment/risk-assessment.component.scss
+++ b/modules/ui/src/app/pages/risk-assessment/risk-assessment.component.scss
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 @import 'src/theming/colors';
+@import 'src/theming/variables';
 
 .risk-assessment-container,
 .risk-assessment-content {
@@ -38,7 +39,7 @@
 }
 
 .profiles-drawer {
-  width: 320px;
+  width: $profiles-drawer-width;
   box-shadow: none;
   border-left: 1px solid $light-grey;
 }
